--- a/styles/main.css
+++ b/styles/main.css
@@ -43,6 +43,8 @@ h3{
     border-radius: 10px;
 }
 
+/* Visiting Card Coding */
+
 #content-div-one-inside{
     padding: 10px;
     border: 3px solid rgb(178, 178, 178);
@@ -59,6 +61,7 @@ h3{
     width: 75%;
     padding-left: 10px;
     padding-top: 5px;
+    padding-bottom: 5px;
     display: inline-block;
 }
 
@@ -66,5 +69,54 @@ caption{
     text-align: left;
     font-weight: bold;
     font-size: large;
+    margin-top: 2px;
     margin-bottom: 6px;
+}
+
+
+/* Calculator Coding */
+
+
+#content-div-two-inside{
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: rgb(169, 191, 126);
+}
+
+#content-div-two-inside > form table{
+    width: 70%;
+    margin: 0 auto;
+    padding: 5px;
+    background-color: rgb(161, 208, 240);
+}
+
+#content-div-two-inside > form table td{
+    padding: 5px;
+    text-align: center;
+}
+
+#content-div-two-inside > form table button{
+    width: 90%;
+    height: 30px;
+    font-weight: bold;
+}
+
+#content-div-two-inside > form table .num{
+    background-color: rgb(239, 239, 239);
+}
+
+#content-div-two-inside > form table .rnum{
+    background-color: rgb(245, 158, 164);
+}
+
+#content-div-two-inside > form table .ynum{
+    background-color: rgb(236, 242, 146);
+}
+
+input{
+    width: 100%;
+    font-size: 18px;
+    padding: 5px;
+    overflow:auto;
+    resize: none;
 }
